--- a/pms_website_sale/templates/pms_common_templates.xml
+++ b/pms_website_sale/templates/pms_common_templates.xml
@@ -122,26 +122,17 @@
     </template>
 
     <template id="pms_booking_engine_errors">
-        <div name="errors" class="row">
-            <div class="col">
-                <div
-                    t-foreach="errors"
-                    t-as="error"
-                    class="alert alert-danger alert-dismissible fade show"
-                    role="alert"
-                >
-                    <strong>Error!</strong>
-                    <t t-esc="error" />
-                    <button
-                        type="button"
-                        class="close"
-                        data-dismiss="alert"
-                        aria-label="Close"
-                    >
-                        <span aria-hidden="true">&amp;times;</span>
-                    </button>
-                </div>
-            </div>
+        <div
+            t-foreach="errors"
+            t-as="error"
+            class="alert alert-danger alert-dismissible fade show"
+            role="alert"
+        >
+            <strong>Error!</strong>
+            <t t-esc="error" />
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&amp;times;</span>
+            </button>
         </div>
     </template>
 
