[FIX] pms_w_s: booking delete button alignement

--- a/pms_website_sale/templates/pms_common_templates.xml
+++ b/pms_website_sale/templates/pms_common_templates.xml
@@ -178,7 +178,7 @@
                                 name="delete"
                                 t-att-value="availability_result.room_type_id.id"
                             />
-                            <button type="submit" class="btn btn-light">
+                            <button type="submit" class="btn btn-light btn-sm">
                                 <span class="fa fa-trash" />
                             </button>
                         </form>
