[FIX] pms_w_s: fix booking flow and notes

--- a/pms_website_sale/templates/pms_address_templates.xml
+++ b/pms_website_sale/templates/pms_address_templates.xml
@@ -122,9 +122,12 @@
                                 </div>
                                 <div class="row form-group justify-content-between">
                                     <div class="col text-left">
-                                        <button class="btn btn-secondary">
+                                        <a
+                                            href="/ebooking/booking/extra_info"
+                                            class="btn btn-secondary"
+                                        >
                                             <span class="fa fa-chevron-left" /> Back
-                                        </button>
+                                        </a>
                                     </div>
                                     <div class="col text-right">
                                         <button class="btn btn-primary" type="submit">
