[FIX] pms_w_s: center text when no rooms available

--- a/pms_website_sale/templates/pms_rooms_list_templates.xml
+++ b/pms_website_sale/templates/pms_rooms_list_templates.xml
@@ -40,7 +40,7 @@
                         </t>
                         <t t-if="not availability_results">
                             <div class="col-12 mt-4">
-                                <p>
+                                <p class="text-center">
                                     There is no rooms available for this
                                     period. Try with other checkin and
                                     checkout dates.
