--- a/pms_website_sale/templates/pms_address_templates.xml
+++ b/pms_website_sale/templates/pms_address_templates.xml
@@ -120,18 +120,35 @@
                                         </select>
                                     </div>
                                 </div>
+                                <div class="form-row">
+                                    <div class="col form-group">
+                                        <label>
+                                            <input
+                                                id="terms_and_conditions_checkbox"
+                                                type="checkbox"
+                                                name="accepted_terms_and_conditions"
+                                                required="required"
+                                            />
+                                            <t
+                                                t-call="website_legal_page.acceptance_full"
+                                            />
+                                        </label>
+                                    </div>
+                                </div>
                                 <div class="row form-group justify-content-between">
                                     <div class="col text-left">
                                         <a
                                             href="/ebooking/booking/extra_info"
                                             class="btn btn-secondary"
                                         >
-                                            <span class="fa fa-chevron-left" /> Back
+                                            <span class="fa fa-chevron-left" />
+                                            Back
                                         </a>
                                     </div>
                                     <div class="col text-right">
                                         <button class="btn btn-primary" type="submit">
-                                            Next <span class="fa fa-chevron-right" />
+                                            Next
+                                            <span class="fa fa-chevron-right" />
                                         </button>
                                     </div>
                                 </div>
