[ADD] pms_w_s: info about tourist tax

--- a/pms_website_sale/templates/pms_booking_payment_templates.xml
+++ b/pms_website_sale/templates/pms_booking_payment_templates.xml
@@ -20,6 +20,7 @@
                                         t-value="booking_engine.availability_results.filtered(lambda r: r.value_num_rooms_selected > 0)"
                                     />
                                 </t>
+                                <t t-call="pms_website_sale.pms_tourist_tax_warning" />
                             </div>
                         </div>
                         <div name="payment_acquirer" class="row">
@@ -38,6 +39,14 @@
                 </div>
             </div>
         </t>
+    </template>
+
+    <template id="pms_tourist_tax_warning">
+        <div class="alert alert-info">
+            <p>
+                <strong>Info</strong> The tourist tax must be paid at arrival.
+            </p>
+        </div>
     </template>
 
     <template id="payment_acquirer_selection">
