--- a/pms/views/pms_room_views.xml
+++ b/pms/views/pms_room_views.xml
@@ -151,10 +151,17 @@
                 <newline />
                 <searchpanel>
                     <field
+                        name="company_id"
+                        string="Company"
+                        enable_counters="1"
+                        icon="fa-building"
+                    />
+                    <field
                         name="pms_property_id"
                         string="Property"
                         enable_counters="1"
                         select="multi"
+                        domain="[('company_id', '=', company_id)]"
                     />
                     <field
                         name="room_type_id"
