[IMP] pms: add necessary fields in room for housekeeping

--- a/pms/views/pms_folio_views.xml
+++ b/pms/views/pms_folio_views.xml
@@ -235,7 +235,7 @@
 
                     <widget
                         name="web_ribbon"
-                        title="Out of Service"
+                        title="Out of Order"
                         bg_color="bg-dark"
                         attrs="{'invisible': [('reservation_type', 'not in', 'out')]}"
                     />
