[WIP]14.0-pms_housekeeping: housekeeping task views

--- a/pms_housekeeping/views/pms_housekeeping_task_type_views.xml
+++ b/pms_housekeeping/views/pms_housekeeping_task_type_views.xml
@@ -8,8 +8,9 @@
                 <tree string="Housekeeping Task Type">
                     <field name="name"/>
                     <field name="is_automated"/>
+                    <field name="is_inspection"/>
                     <field name="housekeepers" widget="many2many_tags" />
-                    <field name="parent_id" widget="many2many_tags" />
+                    <field name="parent_id" />
                     <field name="description" />
                     <field name="priority" attrs="{'invisible': [('is_automated', '==', False)]}"/>
                     <field name="is_overnight" attrs="{'invisible': [('is_automated', '==', False)]}"/>
@@ -28,18 +29,26 @@
             <field name="arch" type="xml">
                 <form string="Housekeeping Task Type">
                     <group>
-                        <field name="name"/>
-                        <field name="is_automated"/>
-                        <field name="housekeepers" widget="many2many_tags" />
-                        <field name="parent_id" widget="many2many_tags" />
-                        <field name="description" />
-                        <field name="priority" attrs="{'invisible': [('is_automated', '==', False)]}"/>
-                        <field name="is_overnight" attrs="{'invisible': [('is_automated', '==', False)]}"/>
-                        <field name="is_empty" attrs="{'invisible': [('is_automated', '==', False)]}"/>
-                        <field name="is_checkin" attrs="{'invisible': [('is_automated', '==', False)]}"/>
-                        <field name="is_checkout" attrs="{'invisible': [('is_automated', '==', False)]}"/>
-                        <field name="days_after_clean_overnight" attrs="{'invisible': [('is_automated', '==', False), ('is_overnight', '==', False)]}"/>
-                        <field name="days_after_clean_empty" attrs="{'invisible': [('is_automated', '==', False), ('is_empty', '==', False)]}"/>
+
+                        <group>
+                            <field name="name"/>
+                            <field name="is_automated"/>
+                            <field name="is_inspection"/>
+                            <field name="housekeepers" widget="many2many_tags" />
+                            <field name="parent_id" />
+                            <field name="description" />
+                        </group>
+
+                        <group attrs="{'invisible': [('is_automated', '==', False)]}">
+                            <field name="priority" />
+                            <field name="is_overnight" />
+                            <field name="is_empty" />
+                            <field name="is_checkin" />
+                            <field name="is_checkout" />
+                            <field name="days_after_clean_overnight" attrs="{'invisible': [('is_overnight', '==', False)]}"/>
+                            <field name="days_after_clean_empty" attrs="{'invisible': [('is_empty', '==', False)]}"/>
+                        </group>
+
                     </group>
                 </form>
             </field>
