--- a/pms_housekeeping/views/hr_employee_views.xml
+++ b/pms_housekeeping/views/hr_employee_views.xml
@@ -5,7 +5,12 @@
         <field name="inherit_id" ref="hr.view_employee_form" />
         <field name="arch" type="xml">
             <xpath expr="//field[@name='work_location']" position="after">
-                <field name="pre_assigned_room_ids" widget="many2many_tags" />
+                <field
+                    name="pre_assigned_room_ids"
+                    widget="many2many_tags"
+                    attrs="{'invisible': [('job_name', '!=', 'Housekeeper')]}"
+                />
+                <field name="job_name" invisible="1" />
             </xpath>
         </field>
     </record>
