--- a/pms_housekeeping/views/pms_housekeeping_task_type_views.xml
+++ b/pms_housekeeping/views/pms_housekeeping_task_type_views.xml
@@ -54,7 +54,13 @@
                         <field name="name" />
                         <field name="is_automated" />
                         <field name="is_inspection" />
-                        <field name="housekeeper_ids" widget="many2many_tags" />
+                        <field
+                            name="housekeeper_ids"
+                            widget="many2many_tags"
+                            domain="[('id', 'in', allowed_housekeeper_ids)]"
+                        />
+                        <field name="pms_property_ids" widget="many2many_tags" />
+                        <field name="allowed_housekeeper_ids" invisible="1" />
                         <field name="parent_id" />
                         <field name="description" />
                     </group>
