[IMP]pms_api_rest: Improvemente Api rest logs and PUT

--- a/pms_api_rest/views/pms_api_log_views.xml
+++ b/pms_api_rest/views/pms_api_log_views.xml
@@ -21,6 +21,13 @@
         <field name="model">pms.api.log</field>
         <field name="arch" type="xml">
             <form string="API Log">
+                <header>
+                    <button
+                        name="related_action_open_record"
+                        string="Related"
+                        type="object"
+                    />
+                </header>
                 <sheet>
                     <group>
                         <group>
